--- a/package.json
+++ b/package.json
@@ -37,10 +37,15 @@
     "ember-data": "^2.6.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-notify": "^5.1.0",
     "ember-resolver": "^2.0.3",
+    "ember-validations-feedback": "0.0.3",
     "ember-welcome-page": "^1.0.1",
     "emberx-select": "2.1.2",
     "font-awesome": "4.6.3",
     "loader.js": "^4.0.1"
+  },
+  "dependencies": {
+    "ember-validations": "~ 2.0.0-alpha.4"
   }
 }
